service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
#      nodePort: 30001
